kubernetes/platform/infra/gateway/base/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
  labels:
    app.kubernetes.io/name: cilium-agent
    app.kubernetes.io/part-of: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: "The default Cilium GatewayClass"
